fixed stages of github action