@@ -1,3 +1,2 @@
 -Xshare:off
---sun-misc-unsafe-memory-access=allow
 -Dio.netty.noUnsafe=true
